// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`people headcount data employee type snapshots: dept, all dimensions 1`] = `
Object {
  "data": Object {
    "root": Object {
      "org": Object {
        "employee_type_data": Object {
          "avg_share": Array [
            Object {
              "avg_share": 0.04230382855229378,
              "dimension": "cas",
            },
            Object {
              "avg_share": 0.8213714328236038,
              "dimension": "ind",
            },
            Object {
              "avg_share": 0.10015998809390929,
              "dimension": "stu",
            },
            Object {
              "avg_share": 0.0361647505301931,
              "dimension": "ter",
            },
          ],
          "basic_trend": Object {
            "active_year_count": 5,
            "avg_headcount": 5375.4,
            "avg_share": 1,
            "change_percent": -0.12635620096811884,
            "first_active_year": "ppl_last_year_5",
            "last_active_year": "ppl_last_year",
            "ppl_last_year": 5234,
            "ppl_last_year_2": 5167,
            "ppl_last_year_3": 5194,
            "ppl_last_year_4": 5291,
            "ppl_last_year_5": 5991,
          },
          "data": Array [
            Object {
              "dimension": "cas",
              "headcount": 228,
              "year": "ppl_last_year_5",
            },
            Object {
              "dimension": "cas",
              "headcount": 197,
              "year": "ppl_last_year_4",
            },
            Object {
              "dimension": "cas",
              "headcount": 214,
              "year": "ppl_last_year_3",
            },
            Object {
              "dimension": "cas",
              "headcount": 300,
              "year": "ppl_last_year_2",
            },
            Object {
              "dimension": "cas",
              "headcount": 198,
              "year": "ppl_last_year",
            },
            Object {
              "dimension": "ind",
              "headcount": 5089,
              "year": "ppl_last_year_5",
            },
            Object {
              "dimension": "ind",
              "headcount": 4405,
              "year": "ppl_last_year_4",
            },
            Object {
              "dimension": "ind",
              "headcount": 4204,
              "year": "ppl_last_year_3",
            },
            Object {
              "dimension": "ind",
              "headcount": 4098,
              "year": "ppl_last_year_2",
            },
            Object {
              "dimension": "ind",
              "headcount": 4280,
              "year": "ppl_last_year",
            },
            Object {
              "dimension": "stu",
              "headcount": 502,
              "year": "ppl_last_year_5",
            },
            Object {
              "dimension": "stu",
              "headcount": 514,
              "year": "ppl_last_year_4",
            },
            Object {
              "dimension": "stu",
              "headcount": 590,
              "year": "ppl_last_year_3",
            },
            Object {
              "dimension": "stu",
              "headcount": 574,
              "year": "ppl_last_year_2",
            },
            Object {
              "dimension": "stu",
              "headcount": 512,
              "year": "ppl_last_year",
            },
            Object {
              "dimension": "ter",
              "headcount": 172,
              "year": "ppl_last_year_5",
            },
            Object {
              "dimension": "ter",
              "headcount": 175,
              "year": "ppl_last_year_4",
            },
            Object {
              "dimension": "ter",
              "headcount": 186,
              "year": "ppl_last_year_3",
            },
            Object {
              "dimension": "ter",
              "headcount": 195,
              "year": "ppl_last_year_2",
            },
            Object {
              "dimension": "ter",
              "headcount": 244,
              "year": "ppl_last_year",
            },
          ],
          "record": Array [
            Object {
              "dimension": "cas",
              "ppl_last_year": 198,
              "ppl_last_year_2": 300,
              "ppl_last_year_3": 214,
              "ppl_last_year_4": 197,
              "ppl_last_year_5": 228,
            },
            Object {
              "dimension": "ind",
              "ppl_last_year": 4280,
              "ppl_last_year_2": 4098,
              "ppl_last_year_3": 4204,
              "ppl_last_year_4": 4405,
              "ppl_last_year_5": 5089,
            },
            Object {
              "dimension": "stu",
              "ppl_last_year": 512,
              "ppl_last_year_2": 574,
              "ppl_last_year_3": 590,
              "ppl_last_year_4": 514,
              "ppl_last_year_5": 502,
            },
            Object {
              "dimension": "ter",
              "ppl_last_year": 244,
              "ppl_last_year_2": 195,
              "ppl_last_year_3": 186,
              "ppl_last_year_4": 175,
              "ppl_last_year_5": 172,
            },
          ],
        },
      },
    },
  },
}
`;

exports[`people headcount data employee type snapshots: dept, one dimensions 1`] = `
Object {
  "data": Object {
    "root": Object {
      "org": Object {
        "employee_type_data": Object {
          "avg_share": Array [
            Object {
              "avg_share": 0.10015998809390929,
              "dimension": "stu",
            },
          ],
          "basic_trend": Object {
            "active_year_count": 5,
            "avg_headcount": 538.4,
            "avg_share": 0.10015998809390929,
            "change_percent": 0.0199203187250996,
            "first_active_year": "ppl_last_year_5",
            "last_active_year": "ppl_last_year",
            "ppl_last_year": 512,
            "ppl_last_year_2": 574,
            "ppl_last_year_3": 590,
            "ppl_last_year_4": 514,
            "ppl_last_year_5": 502,
          },
          "data": Array [
            Object {
              "dimension": "stu",
              "headcount": 502,
              "year": "ppl_last_year_5",
            },
            Object {
              "dimension": "stu",
              "headcount": 514,
              "year": "ppl_last_year_4",
            },
            Object {
              "dimension": "stu",
              "headcount": 590,
              "year": "ppl_last_year_3",
            },
            Object {
              "dimension": "stu",
              "headcount": 574,
              "year": "ppl_last_year_2",
            },
            Object {
              "dimension": "stu",
              "headcount": 512,
              "year": "ppl_last_year",
            },
          ],
          "record": Array [
            Object {
              "dimension": "stu",
              "ppl_last_year": 512,
              "ppl_last_year_2": 574,
              "ppl_last_year_3": 590,
              "ppl_last_year_4": 514,
              "ppl_last_year_5": 502,
            },
          ],
        },
      },
    },
  },
}
`;

exports[`people headcount data employee type snapshots: gov, all dimensions 1`] = `
Object {
  "data": Object {
    "root": Object {
      "gov": Object {
        "employee_type_data": Object {
          "avg_share": Array [
            Object {
              "avg_share": 0.030887897100404724,
              "dimension": "cas",
            },
            Object {
              "avg_share": 0.8575659292934893,
              "dimension": "ind",
            },
            Object {
              "avg_share": 0.000036191039406651756,
              "dimension": "na",
            },
            Object {
              "avg_share": 0.02101159345296397,
              "dimension": "stu",
            },
            Object {
              "avg_share": 0.09049838911373535,
              "dimension": "ter",
            },
          ],
          "basic_trend": Object {
            "active_year_count": 5,
            "avg_headcount": 259732.8,
            "avg_share": 1,
            "change_percent": -0.00046039639749331286,
            "first_active_year": "ppl_last_year_5",
            "last_active_year": "ppl_last_year",
            "ppl_last_year": 262696,
            "ppl_last_year_2": 258979,
            "ppl_last_year_3": 257034,
            "ppl_last_year_4": 257138,
            "ppl_last_year_5": 262817,
          },
          "data": Array [
            Object {
              "dimension": "cas",
              "headcount": 6692,
              "year": "ppl_last_year_5",
            },
            Object {
              "dimension": "cas",
              "headcount": 8002,
              "year": "ppl_last_year_4",
            },
            Object {
              "dimension": "cas",
              "headcount": 8663,
              "year": "ppl_last_year_3",
            },
            Object {
              "dimension": "cas",
              "headcount": 9251,
              "year": "ppl_last_year_2",
            },
            Object {
              "dimension": "cas",
              "headcount": 7505,
              "year": "ppl_last_year",
            },
            Object {
              "dimension": "ind",
              "headcount": 230283,
              "year": "ppl_last_year_5",
            },
            Object {
              "dimension": "ind",
              "headcount": 222721,
              "year": "ppl_last_year_4",
            },
            Object {
              "dimension": "ind",
              "headcount": 219668,
              "year": "ppl_last_year_3",
            },
            Object {
              "dimension": "ind",
              "headcount": 218544,
              "year": "ppl_last_year_2",
            },
            Object {
              "dimension": "ind",
              "headcount": 222474,
              "year": "ppl_last_year",
            },
            Object {
              "dimension": "na",
              "headcount": 47,
              "year": "ppl_last_year",
            },
            Object {
              "dimension": "stu",
              "headcount": 4605,
              "year": "ppl_last_year_5",
            },
            Object {
              "dimension": "stu",
              "headcount": 5189,
              "year": "ppl_last_year_4",
            },
            Object {
              "dimension": "stu",
              "headcount": 5500,
              "year": "ppl_last_year_3",
            },
            Object {
              "dimension": "stu",
              "headcount": 5712,
              "year": "ppl_last_year_2",
            },
            Object {
              "dimension": "stu",
              "headcount": 6281,
              "year": "ppl_last_year",
            },
            Object {
              "dimension": "ter",
              "headcount": 21237,
              "year": "ppl_last_year_5",
            },
            Object {
              "dimension": "ter",
              "headcount": 21226,
              "year": "ppl_last_year_4",
            },
            Object {
              "dimension": "ter",
              "headcount": 23203,
              "year": "ppl_last_year_3",
            },
            Object {
              "dimension": "ter",
              "headcount": 25472,
              "year": "ppl_last_year_2",
            },
            Object {
              "dimension": "ter",
              "headcount": 26389,
              "year": "ppl_last_year",
            },
          ],
          "record": Array [
            Object {
              "dimension": "cas",
              "ppl_last_year": 7505,
              "ppl_last_year_2": 9251,
              "ppl_last_year_3": 8663,
              "ppl_last_year_4": 8002,
              "ppl_last_year_5": 6692,
            },
            Object {
              "dimension": "ind",
              "ppl_last_year": 222474,
              "ppl_last_year_2": 218544,
              "ppl_last_year_3": 219668,
              "ppl_last_year_4": 222721,
              "ppl_last_year_5": 230283,
            },
            Object {
              "dimension": "na",
              "ppl_last_year": 47,
              "ppl_last_year_2": null,
              "ppl_last_year_3": null,
              "ppl_last_year_4": null,
              "ppl_last_year_5": null,
            },
            Object {
              "dimension": "stu",
              "ppl_last_year": 6281,
              "ppl_last_year_2": 5712,
              "ppl_last_year_3": 5500,
              "ppl_last_year_4": 5189,
              "ppl_last_year_5": 4605,
            },
            Object {
              "dimension": "ter",
              "ppl_last_year": 26389,
              "ppl_last_year_2": 25472,
              "ppl_last_year_3": 23203,
              "ppl_last_year_4": 21226,
              "ppl_last_year_5": 21237,
            },
          ],
        },
      },
    },
  },
}
`;

exports[`people headcount data employee type snapshots: gov, one dimension 1`] = `
Object {
  "data": Object {
    "root": Object {
      "gov": Object {
        "employee_type_data": Object {
          "avg_share": Array [
            Object {
              "avg_share": 0.021011593452963967,
              "dimension": "stu",
            },
          ],
          "basic_trend": Object {
            "active_year_count": 5,
            "avg_headcount": 5457.4,
            "avg_share": 0.021011593452963967,
            "change_percent": 0.36395222584147663,
            "first_active_year": "ppl_last_year_5",
            "last_active_year": "ppl_last_year",
            "ppl_last_year": 6281,
            "ppl_last_year_2": 5712,
            "ppl_last_year_3": 5500,
            "ppl_last_year_4": 5189,
            "ppl_last_year_5": 4605,
          },
          "data": Array [
            Object {
              "dimension": "stu",
              "headcount": 4605,
              "year": "ppl_last_year_5",
            },
            Object {
              "dimension": "stu",
              "headcount": 5189,
              "year": "ppl_last_year_4",
            },
            Object {
              "dimension": "stu",
              "headcount": 5500,
              "year": "ppl_last_year_3",
            },
            Object {
              "dimension": "stu",
              "headcount": 5712,
              "year": "ppl_last_year_2",
            },
            Object {
              "dimension": "stu",
              "headcount": 6281,
              "year": "ppl_last_year",
            },
          ],
          "record": Array [
            Object {
              "dimension": "stu",
              "ppl_last_year": 6281,
              "ppl_last_year_2": 5712,
              "ppl_last_year_3": 5500,
              "ppl_last_year_4": 5189,
              "ppl_last_year_5": 4605,
            },
          ],
        },
      },
    },
  },
}
`;

exports[`people headcount data people employee type info: dept 1`] = `
Object {
  "data": Object {
    "root": Object {
      "org": Object {
        "employee_type_info": Object {
          "active_year_count": 5,
          "first_active_year": "ppl_last_year_5",
          "last_active_year": "ppl_last_year",
          "total_avg_headcount": 5375.4,
          "total_change_percent": -0.12635620096811884,
          "total_ppl_last_year": 5234,
          "total_ppl_last_year_2": 5167,
          "total_ppl_last_year_3": 5194,
          "total_ppl_last_year_4": 5291,
          "total_ppl_last_year_5": 5991,
        },
      },
    },
  },
}
`;

exports[`people headcount data people employee type info: gov 1`] = `
Object {
  "data": Object {
    "root": Object {
      "gov": Object {
        "employee_type_info": Object {
          "active_year_count": 5,
          "first_active_year": "ppl_last_year_5",
          "last_active_year": "ppl_last_year",
          "total_avg_headcount": 259732.8,
          "total_change_percent": -0.00046039639749331286,
          "total_ppl_last_year": 262696,
          "total_ppl_last_year_2": 258979,
          "total_ppl_last_year_3": 257034,
          "total_ppl_last_year_4": 257138,
          "total_ppl_last_year_5": 262817,
        },
      },
    },
  },
}
`;
